# Parallel

./: Makefile  README.md  cpu.c  gpu.c  roofline.py  test  test.c
CUDA/: nbody  nbody.cu  run.txt
MPI/: hellompi.c  learn.txt  matrix.c  practice.c  sendmsg.c  sum.c
Miscellaneous/: elloweld.c  matrix_performance.csv
Week2Profiling/: Makefile  learnvectorization.c  learnvectorization.txt  main.c
Week3OpenMP/: Makefile  loops.c  main  main.c  results.txt
Week4Blur/: CMakeLists.txt  Makefile  README.md  blur.c  learn.txt  plot.py  plot2.py  result.txt
blackhole/: kerr_bh  kerr_bh.c  kerr_bh_gpu.c  kerr_shader
